[gd_scene load_steps=4 format=2]

[ext_resource path="res://material_maker/nodes/comment.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
content_margin_left = 28.0
content_margin_right = 28.0
content_margin_top = 24.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.3 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.9 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.0627451 )

[node name="GraphNode" type="GraphNode"]
margin_left = 1.0
margin_top = 1.0
margin_right = 256.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/commentfocus = SubResource( 1 )
custom_styles/comment = SubResource( 1 )
title = "Comment"
show_close = true
resizable = true
comment = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 239.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="VBox"]
margin_right = 223.0
margin_bottom = 14.0
mouse_filter = 0
text = "Double-click to write a comment"
autowrap = true

[node name="TextEdit" type="TextEdit" parent="VBox"]
visible = false
margin_top = 18.0
margin_right = 221.0
margin_bottom = 18.0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
wrap_enabled = true

[node name="Popup" type="Popup" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 239.0
margin_bottom = 39.0

[node name="ColorPicker" type="ColorPicker" parent="Popup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
rect_scale = Vector2( 0.75, 0.75 )
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="gui_input" from="VBox/Label" to="." method="_on_Label_gui_input"]
[connection signal="focus_exited" from="VBox/TextEdit" to="." method="_on_TextEdit_focus_exited"]
